--- a/ui/lawn_match_status/match_status.html
+++ b/ui/lawn_match_status/match_status.html
@@ -5,7 +5,7 @@
     <h3><a href="/">Go Back to Home</a></h3>
         
     <br><br>
-    <h1>Current Match Status</h1>
+    <h1>LAWN Current Match Status</h1>
     {{>lawnscores}}
     <br><br>
     <h3>Get Off My Lawn Status</h3>
@@ -35,7 +35,7 @@
 {{#each lawnscoresList}}
 <table class="table table-striped order-list">
   <thead>
-    <th>Opponnet</th>
+    <th>Opponent</th>
     <th>Get Off My Lawn</th>
   </thead>
   <tbody>
