--- a/ui/match_status/match_status.html
+++ b/ui/match_status/match_status.html
@@ -5,7 +5,7 @@
     <h3><a href="/">Go Back to Home</a></h3>
         
     <br><br>
-    <h1>Current Match Status</h1>
+    <h1>PWW Current Match Status</h1>
     {{>scores}}
     <br><br>
     <h3>Prestige WorldWide Status</h3>
@@ -35,7 +35,7 @@
 {{#each scoresList}}
 <table class="table table-striped order-list">
   <thead>
-    <th>Opponnet</th>
+    <th>Opponent</th>
     <th>PWW</th>
   </thead>
   <tbody>
