--- a/ui/r1_match_status/match_status.html
+++ b/ui/r1_match_status/match_status.html
@@ -5,7 +5,7 @@
     <h3><a href="/">Go Back to Home</a></h3>
         
     <br><br>
-    <h1>Current Match Status</h1>
+    <h1>R1 Current Match Status</h1>
     {{>r1scores}}
     <br><br>
     <h3>Relentless Ones Status</h3>
@@ -35,7 +35,7 @@
 {{#each r1scoresList}}
 <table class="table table-striped order-list">
   <thead>
-    <th>Opponnet</th>
+    <th>Opponent</th>
     <th>Relentless Ones</th>
   </thead>
   <tbody>
